# spsim

./: README.md  parakeet_scarf_setup.sh  program.py  setup.cfg  setup.py  simulator.ipynb
spsim/: __init__.py  cli.py  data_model.py  functions.py  gemmi.py  rotation.py  simulation.py  simulation_functions.py  typing.py  utils.py
spsim/parakeet_interface/: __init__.py  config.py  template.yaml
test_data/: config.yaml  parakeet_test_run.sh
tests/: constants.py  test_data_model.py  test_functions.py  test_parakeet_interface.py  test_simulation.py  test_typing.py
