
[metadata]
name = spsim
url = https://github.com/alisterburt/spsim
author = Alister Burt
author_email = alisterburt@gmail.com
description = package description.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD license
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source Code =https://github.com/alisterburt/spsim

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires =
    setuptools_scm
install_requires =
    numpy
    scipy
    gemmi
    mrcfile
    starfile
    pydantic
    click
    jupyterlab
    dask
    dask-jobqueue
    bokeh
    zarr
    humanize

[options.extras_require]
testing =
    pytest
dev =
    ipython
    jedi<0.18.0
    black
    flake8
    flake8-docstrings
    isort
    mypy
    pre-commit
    pydocstyle
    pytest
    jupyter-book

[options.entry_points]
console_scripts =
    spsim.scarf = spsim.cli:spsim_scarf
    zarr2mrcs = spsim.cli:zarr2mrcs_cli

[bdist_wheel]
universal = 1

[flake8]
exclude = docs,_version.py,.eggs,examples
max-line-length = 88
docstring-convention = numpy
ignore =  D100, D213, D401, D413, D107, W503

[isort]
profile = black
src_paths = spsim

[pydocstyle]
match_dir = spsim
convention = numpy
add_select = D402,D415,D417
ignore = D100, D213, D401, D413, D107

[tool:pytest]
addopts = -W error

[mypy]
files = spsim
warn_unused_configs = True
warn_unused_ignores = True
check_untyped_defs = True
implicit_reexport = False
# this is strict!
# disallow_untyped_defs = True
show_column_numbers = True
show_error_codes = True
ignore_missing_imports = True


